--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
   <artifactId>msbuild</artifactId>
   <packaging>hpi</packaging>
   <version>1.4-SNAPSHOT</version>
-  <name>Hudson MSBuild Plugin</name>
-  <url>http://wiki.hudson-ci.org/display/HUDSON/MSBuild+Plugin</url>
+  <name>Jenkins MSBuild Plugin</name>
+  <url>http://wiki.jenkins-ci.org/display/JENKINS/MSBuild+Plugin</url>
   <developers>
     <developer>
       <id>kdsweeney</id>
